  - Allow viewing connection details while connection is open
  - Add script table as SELECT option
  - Enhance connection create/edit dialog to show simple and advanced views for easier connecting to databases
  Bug Fixes:
  - UPDATE AND DELETE statements are not generated correctly for table with composite primary keys
Version: 0.3.0.3
  New Features:
  - SE-29 Provide ability to run SQL from files
  - SE-30 Allow users to close all worksheets without saving
  - SE-35 Add executed SQL to script output prior to displaying results
  - SE-41 Do not clear script output on execution of commit and rollback
  - SE-46 Provide the ability to script INSERT statements for a table
  - SE-49 Provide the ability to script UPDATE statements for a table
  - SE-50 Provide the ability to see public and private synonyms separate
  - SE-51 Provide the ability to show primary key columns for a table
  - SE-53 Provide the ability to script DELETE statements for a table
  - SE-56 Provide the ability to show and edit stored procedures
  Bug Fixes:
  - SE-20 Application locks after it is minimized for a long time
  - SE-27 Table details (Data tab) does not work with SQL Server
  - SE-31 When inserting values using 'Run Script' showing 'INSERTeD'
  - SE-32 When a non-query command starts with a comment, query is executed successfully but output does not show the results properly
  - SE-33 When an operation is canceled, the query does not return right away
  - SE-34 Query results do not show outputs from stored procedures
  - SE-36 Running multiple DML statements as a script in non-auto-commit mode causes an error
  - SE-37 Fetch More Rows, Fetch All Rows and Refresh tools are enabled after a DML query under transaction is executed
  - SE-38 Intellisense displays tables instead of columns in certain scenarios
  - SE-39 Item from intellisense not inserted correctly
  - SE-42 Auto-commit option is not preserved between runs